Fix #24639 - [Bug] Add toxList and lcaList to simplified report

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
@@ -183,7 +183,7 @@ path.securitylists                       = Listes s\u00E9curit\u00E9
 path.sellingunitofmeasure                = Unit\u00E9s de mesure utilis\u00E9e pour la Facture
 path.semifinishedproduct_hierarchy       = Hi\u00E9rarchie des semi-finis
 path.signedreports                       = Rapports sign\u00E9s
-path.simplifiedcomparisonreport          = Rapport de comparaison simpifi\u00E9
+path.simplifiedcomparisonreport          = Rapport de comparaison simplifi\u00E9
 path.sortingbonuscriteria                = Bonus tri
 path.sortingmaluscriteria                = Malus tri
 path.speciesforfishery                   = Esp\u00E8ce de poisson
