--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_fr.properties
@@ -239,7 +239,7 @@ data.list.securitylist                        = Listes s\u00E9curit\u00E9
 data.list.sellingunitofmeasure                = Unit\u00E9s de mesure utilis\u00E9e pour la Facture
 data.list.semifinishedproduct_hierarchy       = Hi\u00E9rarchie des semi-finis
 data.list.signedreport                        = Rapports sign\u00E9s
-data.list.simplifiedcomparisonreport          = Rapport de comparaison simpifi\u00E9
+data.list.simplifiedcomparisonreport          = Rapport de comparaison simplifi\u00E9
 data.list.sortingbonuscriteria                = Bonus tri
 data.list.sortingmaluscriteria                = Malus tri
 data.list.speciesforfishery                   = Esp\u00E8ce de poisson
