--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
@@ -113,13 +113,14 @@ linkshare.action.google-plus.label = Partager via Google+
 linkshare.action.twitter.label     = Partager via Twitter
 linkshare.action.twitter.message   = Fichier {1} partag\u00E9 via beCPG
 
-menu.basket.empty                = Vider le panier
-menu.basket.show                 = Afficher le panier
-menu.create-content.entity       = Entit\u00E9...
-menu.create-content.externalLink = Lien externe...
-menu.selected-items.lock         = Verrouiller le(s) ligne(s)
-menu.selected-items.quick-share  = Partager les documents
-menu.selected-items.unlock       = D\u00E9verrouiller le(s) ligne(s)
+menu.basket.empty                           = Vider le panier
+menu.basket.show                            = Afficher le panier
+menu.create-content.entity                  = Entit\u00E9...
+menu.create-content.externalLink            = Lien externe...
+menu.selected-items.lock                    = Verrouiller le(s) ligne(s)
+menu.selected-items.quick-share             = Partager les documents
+menu.selected-items.unlock                  = D\u00E9verrouiller le(s) ligne(s)
+menu.selected-items.update-supplier-account = Mettre \u00E0 jour le compte fournisseur
 
 message.annotation-cancel.failure             = Impossible d'annuler les annotations
 message.annotation-cancel.inprogress          = Annulation des annotations
@@ -178,6 +179,10 @@ message.unlock.title                          = D\u00E9verrouillage de(s) ligne(
 message.update-permissions.failure            = Echec de la mise \u00E0 jour des permissions
 message.update-permissions.please-wait        = Veuillez patienter. Mise \u00E0 jour des permissions en cours...
 message.update-permissions.success            = Succ\u00E8s de la mise \u00E0 jour des permissions
+message.update-supplier-account.description   = \u00CAtes-vous s\u00FBr de vouloir mettre \u00E0 jour le compte fournisseur ?
+message.update-supplier-account.failure       = Echec de la mise \u00E0 jour du compte fournisseur
+message.update-supplier-account.success       = Succ\u00E8s de la mise \u00E0 jour du compte fournisseur
+message.update-supplier-account.title         = Mise \u00E0 jour du compte fournisseur
 
 page.becpg.admin.description                      = Page d'administration beCPG
 page.becpg.admin.title                            = Administration beCPG
