Fix #26761 - [Feature] Modified pack label description

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/packModel_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/packModel_fr.properties
@@ -54,7 +54,7 @@ pack_packmodel.property.pack_pmlWeight.title                   = Poids (g)
 pack_packmodel.property.pack_tare.title                        = Tare
 pack_packmodel.property.pack_tareUnit.title                    = Unit\u00E9 de tare
 pack_packmodel.property.pack_width.title                       = Largeur ext\u00E9rieure (mm)
-pack_packmodel.type.pack_label.description                     = Mention affich\u00E9e sur un packaging
+pack_packmodel.type.pack_label.description                     = Mention affich\u00E9e sur un packaging (administration)
 pack_packmodel.type.pack_label.title                           = Mention
 pack_packmodel.type.pack_labelingList.description              = Sp\u00E9cifications des mentions requises sur le packaging
 pack_packmodel.type.pack_labelingList.title                    = Mentions
