Fix #26973 - [Bug] Add admin charact activites names

--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_fr.properties
@@ -139,6 +139,7 @@ data.list.microbiotype                        = Type de caract\u00E9ristiques mi
 data.list.microbiounits                       = Unit\u00E9s microbiologie
 data.list.noncompliant                        = Non conforme
 data.list.nonconformity                       = Non conformit\u00E9s
+data.list.notificationRuleList                = Notifications
 data.list.nut                                 = Nutriments
 data.list.nutList                             = Nutriments
 data.list.nutfactsmethods                     = M\u00E9thodes de mesures des nutriments
@@ -162,6 +163,7 @@ data.list.packagingtermsandconditionscode     = Indications d'emballage r\u00E9u
 data.list.packagingtypecode                   = Types d'emballage
 data.list.pallettypecode                      = Types de support palette
 data.list.personalprotection                  = Equipements de protection individuelle
+data.list.physicoChem                         = Caract\u00E9ristiques physico-chimiques
 data.list.physicoChemList                     = Physico-chimiques
 data.list.physicochem                         = Caract\u00E9ristiques physico-chimiques
 data.list.physicotype                         = Type de physico-chimiques
@@ -202,6 +204,7 @@ data.list.qualitylist                         = Listes qualit\u00E9
 data.list.qualityreporttemplates              = Rapports qualit\u00E9
 data.list.qualityspecification                = Sp\u00E9cifications
 data.list.qualitytemplates                    = Mod\u00E8les qualit\u00E9
+data.list.questionLabel                       = Libell\u00E9s
 data.list.rawmaterial                         = Mati\u00E8re premi\u00E8re
 data.list.rawmaterial_hierarchy               = Hi\u00E9rarchie des mati\u00E8res premi\u00E8res
 data.list.rawmaterialreporttemplate           = Fiche Technique Fournisseur
@@ -229,9 +232,12 @@ data.list.supplier_hierarchy                  = Hi\u00E9rarchie des fournisseurs
 data.list.supplierdocuments                   = Documents fournisseur
 data.list.supplierentities                    = Entit\u00E9s fournisseur
 data.list.suppliers                           = Fournisseurs
+data.list.surveyQuestion                      = Questionnaires
 data.list.svhcreasonsforinclusions            = Raisons de l'inclusion dans les SVHC
 data.list.targetMarket                        = March\u00E9s cibles
 data.list.taskList                            = T\u00E2ches
+data.list.tox                                 = Toxicit\u00E9s
+data.list.toxIng                              = Toxicologie des ingr\u00E9dients
 data.list.tradeitemtradechannel               = Circuits de distribution
 data.list.tradeitemunitdescriptorcode         = Types d'unit\u00E9 commerciale
 data.list.trademark                           = Marques
