Fix #26740 - [Feature] Add absorption type for tox

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
@@ -306,6 +306,7 @@ bcpg_bcpgmodel.property.bcpg_ingToxMaxSensitization.title                       
 bcpg_bcpgmodel.property.bcpg_ingToxMaxSkinIrritationLeaveOn.title               = Max skin irritation leave-on (%)
 bcpg_bcpgmodel.property.bcpg_ingToxMaxSkinIrritationRinseOff.title              = Max skin irritation rinse-off (%)
 bcpg_bcpgmodel.property.bcpg_ingToxMosMoe.title                                 = MoS/MoE
+bcpg_bcpgmodel.property.bcpg_ingToxOralAbsorption.title                         = Oral absorption (%)
 bcpg_bcpgmodel.property.bcpg_ingToxPodSystemic.title                            = POD systemic (mg/kg/d)
 bcpg_bcpgmodel.property.bcpg_ingTypeDecThreshold.description                    = The type is detailed when percentage is exceeded
 bcpg_bcpgmodel.property.bcpg_ingTypeDecThreshold.title                          = Threshold (%)
@@ -532,6 +533,7 @@ bcpg_bcpgmodel.property.bcpg_supplierTel.title                                  
 bcpg_bcpgmodel.property.bcpg_svhcListMigrationPerc.title                        = Migration (%)
 bcpg_bcpgmodel.property.bcpg_svhcListQtyPerc.title                              = Quantity (%)
 bcpg_bcpgmodel.property.bcpg_svhcReasonsForInclusion.title                      = SVHC type
+bcpg_bcpgmodel.property.bcpg_toxAbsorptionType.title                            = Absorption type
 bcpg_bcpgmodel.property.bcpg_toxCalculateMax.title                              = Calculate max values
 bcpg_bcpgmodel.property.bcpg_toxCalculateSystemic.title                         = Calculate systemic values
 bcpg_bcpgmodel.property.bcpg_toxIngIng.title                                    = Ingredient
@@ -804,6 +806,9 @@ listconstraint.bcpg_reqTypes.Tolerated                                = Tolerate
 listconstraint.bcpg_synchronisableStates.Manual                       = Manual
 listconstraint.bcpg_synchronisableStates.Synchronized                 = Synchronized
 listconstraint.bcpg_synchronisableStates.Template                     = Template
+listconstraint.bcpg_toxAbsorptionTypes.Dermal                         = Dermal
+listconstraint.bcpg_toxAbsorptionTypes.Oral                           = Oral
+listconstraint.bcpg_toxAbsorptionTypes.Worst                          = 100%
 listconstraint.bcpg_toxTypesConstraint.OcularIrritation               = Ocular irritation
 listconstraint.bcpg_toxTypesConstraint.PhototoxicalPotential          = Phototoxical potential
 listconstraint.bcpg_toxTypesConstraint.Sensitization                  = Sensitization
