--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -306,6 +306,7 @@ bcpg_bcpgmodel.property.bcpg_ingToxMaxSensitization.title                       
 bcpg_bcpgmodel.property.bcpg_ingToxMaxSkinIrritationLeaveOn.title               = Irritation cutan\u00E9e non rinc\u00E9 maximale (%)
 bcpg_bcpgmodel.property.bcpg_ingToxMaxSkinIrritationRinseOff.title              = Irritation cutan\u00E9e rinc\u00E9 maximale (%)
 bcpg_bcpgmodel.property.bcpg_ingToxMosMoe.title                                 = MoS/MoE
+bcpg_bcpgmodel.property.bcpg_ingToxOralAbsorption.title                         = Absorption orale (%)
 bcpg_bcpgmodel.property.bcpg_ingToxPodSystemic.title                            = POD syst\u00E9mique (mg/kg/j)
 bcpg_bcpgmodel.property.bcpg_ingTypeDecThreshold.description                    = La cat\u00E9gorie r\u00E9glementaire est d\u00E9taill\u00E9e lorsque le seuil est d\u00E9pass\u00E9
 bcpg_bcpgmodel.property.bcpg_ingTypeDecThreshold.title                          = Seuil (%)
@@ -532,6 +533,7 @@ bcpg_bcpgmodel.property.bcpg_supplierTel.title                                  
 bcpg_bcpgmodel.property.bcpg_svhcListMigrationPerc.title                        = Migration (%)
 bcpg_bcpgmodel.property.bcpg_svhcListQtyPerc.title                              = Quantit\u00E9 (%)
 bcpg_bcpgmodel.property.bcpg_svhcReasonsForInclusion.title                      = Type de SVHC
+bcpg_bcpgmodel.property.bcpg_toxAbsorptionType.title                            = Type d'absorption
 bcpg_bcpgmodel.property.bcpg_toxCalculateMax.title                              = Calculer les valeurs max
 bcpg_bcpgmodel.property.bcpg_toxCalculateSystemic.title                         = Calculer les valeurs syst\u00E9miques
 bcpg_bcpgmodel.property.bcpg_toxIngIng.title                                    = Ingr\u00E9dient
@@ -802,6 +804,9 @@ listconstraint.bcpg_reqTypes.Tolerated                                = Tol\u00E
 listconstraint.bcpg_synchronisableStates.Manual                       = Manuel
 listconstraint.bcpg_synchronisableStates.Synchronized                 = Synchronis\u00E9
 listconstraint.bcpg_synchronisableStates.Template                     = Mod\u00E8le
+listconstraint.bcpg_toxAbsorptionTypes.Dermal                         = Cutan\u00E9e
+listconstraint.bcpg_toxAbsorptionTypes.Oral                           = Orale
+listconstraint.bcpg_toxAbsorptionTypes.Worst                          = 100%
 listconstraint.bcpg_toxTypesConstraint.OcularIrritation               = Irritation oculaire
 listconstraint.bcpg_toxTypesConstraint.PhototoxicalPotential          = Potentiel phototoxique
 listconstraint.bcpg_toxTypesConstraint.Sensitization                  = Sensibilisation
