Fix #26786 - [Bug] Fix supplier report messages

--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fr.properties
@@ -105,10 +105,6 @@ cdlFreq = Fr\u00E9quence
 
 cdlQty = Quantit\u00E9 \u00E0 contr\u00F4ler
 
-
-certified = Certifi\u00E9
-
-
 certificatAgence = Agence de certification
 
 certificatStandart = Standard de certification
@@ -119,7 +115,9 @@ certification = Certification
 
 certificationChapter = CERTIFICATIONS
 
-certificationNumber = NumE9ro du certificat
+certificationNumber = Num\u00E9ro du certificat
+
+certified = Certifi\u00E9
 
 chapterAllergens = ALLERG\u00C8NES
 
@@ -429,7 +427,7 @@ level = Niveau
 
 lifeAssessment = ANALYSE DU CYCLE DE VIE
 
-locationState = C9tat / RE9gion / Canton
+locationState = \u00C9tat / R\u00E9gion / Canton
 
 locationZip = Code postal
 
@@ -467,7 +465,7 @@ minimumDurabilityDate = Date de durabilit\u00E9 minimale
 
 minimumLifeDelivery = Dur\u00E9e de vie minimum \u00E0 livraison (J)
 
-mobilePhone = TE9lE9phone (mobile)
+mobilePhone = T\u00E9l\u00E9phone (mobile)
 
 modificationsConclusions = Modifications - Conclusions : 
 
@@ -922,7 +920,7 @@ validated = Valid\u00E9 le :
 
 valideFrom = Valide de
 
-valideTo = Valide jusqu'E0
+valideTo = Valide jusqu'\u00E0
 
 value = Valeurs
 
@@ -952,7 +950,7 @@ weightG = Poids (g)
 
 width = Largeur ext\u00E9rieure (mm) :\u00A0
 
-workPhone = TE9lE9phone (Bureau)
+workPhone = T\u00E9l\u00E9phone (Bureau)
 
 writer = R\u00E9dacteur : 
 
