Fix #27038 - [Feature] Improve user import and SSO management

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_en.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_en.properties
@@ -19,6 +19,7 @@ autonum.prefix.semiFinishedProduct.code      = SFP
 autonum.prefix.supplier.code                 = S
 
 becpg.mail.distribution.title = New product available
+becpg.mail.newPassword.title  = beCPG: new password
 #mail service
 becpg.mail.newUser.title      = beCPG: account created
 becpg.mail.template.notfound  = Template model not found.<br>
