--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_fr.properties
@@ -18,6 +18,7 @@ autonum.prefix.semiFinishedProduct.code      = SF
 autonum.prefix.supplier.code                 = F
 
 becpg.mail.distribution.title = Diffusion fiche produit
+becpg.mail.newPassword.title  = beCPG: nouveau mot de passe
 becpg.mail.newUser.title      = beCPG : compte cr\u00E9\u00E9
 becpg.mail.template.notfound  = Le Modele d'email n'a pas &eacute;teacute; trouv&eacute;.<br>
 
