--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
@@ -91,11 +91,12 @@ label.assignedUsers          = Utilisateurs assign\u00E9s
 label.compare                = Comparer
 label.entity                 = Entit\u00E9
 label.export-search          = Exporter le r\u00E9sultat
+label.generatepassword       = G\u00E9n\u00E9rer un mot de passe
 label.notify-supplier        = Envoyer une notification au fournisseur
 label.revert                 = R\u00E9tablir
 label.saml                   = Connectez-vous avec SSO...
 label.select-columns.title   = Choisissez les colonnes \u00E0 afficher
-label.ssouser                = Utilisateur SSO
+label.ssouser                = Synchroniser avec IDS
 label.supplier-account.title = Adresse email du fournisseur
 label.usercontentlocale      = Langue du contenu
 label.userlocale             = Langue de l'interface
