Fix #27038 - [Feature] Improve user import and SSO management

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share_en.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share_en.properties
@@ -89,11 +89,12 @@ label.assignedUsers          = Assigned users
 label.compare                = Compare
 label.entity                 = Entity
 label.export-search          = Export the result
+label.generatepassword       = Generate password
 label.notify-supplier        = Send notification to supplier
 label.revert                 = Revert
 label.saml                   = Connect with SSO
 label.select-columns.title   = Check Columns to show
-label.ssouser                = SSO user
+label.ssouser                = Synchronize with IDS
 label.supplier-account.title = Supplier email address
 label.usercontentlocale      = Content language
 label.userlocale             = UI language
