Fix #27241 - [Feature] Change automatic formulation labeling and filter on where used states

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_fr.properties
@@ -13,13 +13,13 @@ beCPG.copyOrBranch.typesToReset.description                    = Permet de d\u00
 beCPG.currency.supported.description                           = Permet de d\u00E9finir les devises support\u00E9es par le syst\u00E8me, s\u00E9par\u00E9es par des virgules
 beCPG.datalist.effectiveFilterEnabled.description              = Si "true", le syst\u00E8me n'affiche pas les lignes non effectives dans les listes composition, emballage et process
 beCPG.defaultSearchTemplate.description                        = Permet de d\u00E9finir le mod\u00E8le de recherche par d\u00E9faut utilis\u00E9 par Alfresco
-beCPG.eco.automatic.apply.description                          = Permet de sp\u00E9cifier si l'ordre de modification automatique doit \u00EAtre appliqu\u00E9
-beCPG.eco.automatic.deleteOnApply.description                  = Permet de sp\u00E9cifier si les ordres de modification doivent \u00EAtre supprim\u00E9s apr\u00E8s avoir \u00E9t\u00E9 appliqu\u00E9s
+beCPG.eco.automatic.apply.description                          = Si true, et si pas de formulation automatique, le syst\u00E8me planifie l'application de l'ordre de modification automatique
+beCPG.eco.automatic.deleteOnApply.description                  = Permet de sp\u00E9cifier si l'ordre de modification automatique doit \u00EAtre supprim\u00E9 apr\u00E8s avoir \u00E9t\u00E9 appliqu\u00E9
 beCPG.eco.automatic.enable.description                         = Active la formulation automatique, le merge automatique et l'ordre de modification automatique
-beCPG.eco.automatic.record.version.type.description            = Permet de sp\u00E9cifier le type de version (MAJOR, MINOR) \u00E0 cr\u00E9er lors d'un ordre de modification
-beCPG.eco.automatic.revision.type.description                  = Permet de sp\u00E9cifier le type de r\u00E9vision d'un ordre de modification
-beCPG.eco.automatic.states.description                         = Permet de lister les \u00E9tats pour lesquels les produits sont concern\u00E9s par les ordres de modification automatiques et la formulation automatique
-beCPG.eco.automatic.withoutRecord.description                  = Permet de sp\u00E9cifier si les modifications ne doivent pas \u00EAtre versionn\u00E9es automatiquement
+beCPG.eco.automatic.record.version.type.description            = Permet de sp\u00E9cifier le type de version (MAJOR, MINOR) \u00E0 cr\u00E9er lors de l'ordre de modification automatique
+beCPG.eco.automatic.revision.type.description                  = Permet de sp\u00E9cifier le type de r\u00E9vision de l'ordre de modification automatique
+beCPG.eco.automatic.states.description                         = Permet de lister les \u00E9tats pour lesquels les produits sont concern\u00E9s par l'ordre de modification automatique et la formulation automatique
+beCPG.eco.automatic.withoutRecord.description                  = Si true, le syst\u00E8me planifie la formulation automatique
 beCPG.entity.report.mltext.fields.description                  = Permet de lister les champs qui seront extraits en multilingues
 beCPG.entity.report.mltext.locales.description                 = Permet de lister les langues dans lesquelles les champs multilingues seront extraits, s\u00E9par\u00E9es par des virgules. Si vide, toutes les langues seront prises en compte
 beCPG.formulation.costList.keepProductUnit.description         = Permet de sp\u00E9cifier si l'unit\u00E9 du produit doit \u00EAtre conserv\u00E9e dans le calcul des co\u00FBts
@@ -74,16 +74,16 @@ project.extractor.myProjectAttributes.description    = Permet de lister les attr
 project.subProject.propsToCopyFromParent.description = Permet de lister les attributs \u00E0 copier depuis le projet parent vers un sous-projet lors de la formulation
 project.subProject.propsToCopyToParent.description   = Permet de lister les attributs \u00E0 copier depuis un sous-projet vers le projet parent lors de la formulation
 
-system-configuration.conf-reset                 = La valeur de configuration \u00E9t\u00E9 r\u00E9initialis\u00E9e
-system-configuration.conf-updated               = La valeur de configuration \u00E9t\u00E9 mise \u00E0 jour avec succ\u00E8s
-system-configuration.reset                      = R\u00E9tablir
-system-configuration.save                       = Sauvegarder
-system-configuration.section.change-order.title = Ordre de modification
-system-configuration.section.export.title       = Export
-system-configuration.section.format.title       = Format
-system-configuration.section.formulation.title  = Formulation
-system-configuration.section.project.title      = Projet
-system-configuration.section.report.title       = Rapport
-system-configuration.section.search.title       = Recherche
-system-configuration.section.system.title       = Syst\u00E8me
-system-configuration.title                      = Configuration du syst\u00E8me beCPG
+system-configuration.conf-reset                          = La valeur de configuration \u00E9t\u00E9 r\u00E9initialis\u00E9e
+system-configuration.conf-updated                        = La valeur de configuration \u00E9t\u00E9 mise \u00E0 jour avec succ\u00E8s
+system-configuration.reset                               = R\u00E9tablir
+system-configuration.save                                = Sauvegarder
+system-configuration.section.automatic-formulation.title = Formulation automatique
+system-configuration.section.export.title                = Export
+system-configuration.section.format.title                = Format
+system-configuration.section.formulation.title           = Formulation
+system-configuration.section.project.title               = Projet
+system-configuration.section.report.title                = Rapport
+system-configuration.section.search.title                = Recherche
+system-configuration.section.system.title                = Syst\u00E8me
+system-configuration.title                               = Configuration du syst\u00E8me beCPG
