Fix #24513 - [Feature] Added cost type locales

--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_es.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_es.properties
@@ -229,6 +229,9 @@ costType = Tipo de costo
 
 costType.currentCost  = Costo actual
 costType.futureCost   = Costo futuro
+costType.futureCost2  = Costo futuro (N+2)
+costType.futureCost3  = Costo futuro (N+3)
+costType.futureCost4  = Costo futuro (N+4)
 costType.previousCost = Costo anterior
 
 costUnitPerSU = Costo {priceListUnit}/UV
