--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fi.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fi.properties
@@ -120,6 +120,8 @@ certificationChapter = SERTIFIOINNIT
 
 certificationNumber = Todistuksen numero
 
+certified = Sertifioitu
+
 chapterAllergens = ALLERGEENIT
 
 chapterCoil = Kela
@@ -230,6 +232,9 @@ costType = Kustannustyyppi
 
 costType.currentCost  = Nykyinen hinta
 costType.futureCost   = Tulevat kustannukset
+costType.futureCost2  = Tulevat kustannukset (N+2)
+costType.futureCost3  = Tulevat kustannukset (N+3)
+costType.futureCost4  = Tulevat kustannukset (N+4)
 costType.previousCost = Edellinen kustannus
 
 costUnitPerSU = Kustannukset {priceListUnit} / SU
