--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fr.properties
@@ -231,6 +231,9 @@ costType = Type de co\u00FBt
 
 costType.currentCost  = Co\u00FBt actuel (N)
 costType.futureCost   = Co\u00FBt futur (N+1)
+costType.futureCost2  = Co\u00FBt futur (N+2)
+costType.futureCost3  = Co\u00FBt futur (N+3)
+costType.futureCost4  = Co\u00FBt futur (N+4)
 costType.previousCost = Co\u00FBt pr\u00E9c\u00E9dent (N-1)
 
 costUnitPerSU = Co\u00FBt {priceListUnit}/UV
