--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_it.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_it.properties
@@ -121,6 +121,8 @@ certificationChapter = CERTIFICAZIONI
 
 certificationNumber = Numero di certificato
 
+certified = Certificato
+
 chapterAllergens = ALLERGENI
 
 chapterCoil = Bobina
@@ -231,6 +233,9 @@ costType = Tipo di costo
 
 costType.currentCost  = Costo attuale
 costType.futureCost   = Costo futuro
+costType.futureCost2  = Costo futuro (N+2)
+costType.futureCost3  = Costo futuro (N+3)
+costType.futureCost4  = Costo futuro (N+4)
 costType.previousCost = Costo precedente
 
 costUnitPerSU = Costo {priceListUnit}/UV
