--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_pt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_pt.properties
@@ -119,6 +119,8 @@ certificationChapter = CERTIFICA\u00C7\u00D5ES
 
 certificationNumber = N\u00FAmero do certificado
 
+certified = Certificado
+
 chapterAllergens = ALLERGENS
 
 chapterCoil = Bobina
@@ -229,6 +231,9 @@ costType = Tipo de custo
 
 costType.currentCost  = Custo atual
 costType.futureCost   = Custo futuro
+costType.futureCost2  = Custo futuro (N+2)
+costType.futureCost3  = Custo futuro (N+3)
+costType.futureCost4  = Custo futuro (N+4)
 costType.previousCost = Custo anterior
 
 costUnitPerSU = Custo {priceListUnit} / SU
@@ -472,7 +477,8 @@ month = M
 
 months = M
 
-na = N\u00e3o aplic\u00e1vel
+
+na = N\u00E3o aplic\u00E1vel
 
 name = Nome do Produto
 
