--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_sv.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_sv.properties
@@ -119,6 +119,8 @@ certificationChapter = CERTIFIERINGAR
 
 certificationNumber = Certifikatets nummer
 
+certified = Auktoriserad
+
 chapterAllergens = ALLERGENER
 
 chapterCoil = Spole
@@ -229,6 +231,9 @@ costType = Kostnadstyp
 
 costType.currentCost  = Aktuell kostnad
 costType.futureCost   = Aktuell kostnad
+costType.futureCost2  = Aktuell kostnad (N+2)
+costType.futureCost3  = Aktuell kostnad (N+3)
+costType.futureCost4  = Aktuell kostnad (N+4)
 costType.previousCost = Tidigare kostnad
 
 costUnitPerSU = Kostnad {priceListUnit} / SU
@@ -473,6 +478,7 @@ month = M\u00E5nad
 months = M\u00E5nader
 
 na = Ej till\u00e4mpligt
+
 
 name = Produktnamn
 
