--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_zh_CN.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_zh_CN.properties
@@ -105,9 +105,7 @@ cdlFreq = \u9891\u7387
 
 cdlQty = \u6570\u91CF\u8981\u63A7\u5236
 
-
 certified = \u5df2\u8ba4\u8bc1
-
 
 certificatAgence = \u8BA4\u8BC1\u673A\u6784
 
@@ -120,6 +118,8 @@ certification = \u8BA4\u8BC1
 certificationChapter = \u8BC1\u4E66
 
 certificationNumber = \u8BC1\u4E66\u7F16\u53F7
+
+certified = \u5DF2\u8BA4\u8BC1
 
 chapterAllergens = \u8FC7\u654F\u539F
 
@@ -231,6 +231,9 @@ costType = \u8D39\u7528\u7C7B\u578B
 
 costType.currentCost  = \u5F53\u524D\u6210\u672C
 costType.futureCost   = \u672A\u6765\u6210\u672C
+costType.futureCost2  = \u672A\u6765\u6210\u672C (N+2)
+costType.futureCost3  = \u672A\u6765\u6210\u672C (N+3)
+costType.futureCost4  = \u672A\u6765\u6210\u672C (N+4)
 costType.previousCost = \u4EE5\u524D\u7684\u8D39\u7528
 
 costUnitPerSU = \u8D39\u7528{priceListUnit} / SU
@@ -790,7 +793,6 @@ step = \u6B65
 storageConditions = \u8D2E\u85CF\u6761\u4EF6
 
 su = \u82CF
-
 suitable = \u6539\u7f16
 
 supplier = \u4F9B\u5E94\u5546
