--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_de.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_de.properties
@@ -119,6 +119,8 @@ certificationChapter = ZERTIFIKATE
 
 certificationNumber = Nummer des Zertifikats
 
+certified = Zertifiziert
+
 chapterAllergens = ALLERGENE
 
 chapterCoil = Spule
@@ -229,6 +231,9 @@ costType = Kostenart
 
 costType.currentCost  = Aktuelle Kosten
 costType.futureCost   = Zuk\u00FCnftige Kosten
+costType.futureCost2  = Zuk\u00FCnftige Kosten (N+2)
+costType.futureCost3  = Zuk\u00FCnftige Kosten (N+3)
+costType.futureCost4  = Zuk\u00FCnftige Kosten (N+4)
 costType.previousCost = Bisherige Kosten
 
 costUnitPerSU = Kosten {priceListUnit}/VE
