Fix #24513 - [Feature] Added cost type locales

--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_de.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_de.properties
@@ -105,8 +105,6 @@ cdlFreq = Frequenz
 
 cdlQty = Zu kontrollierende Menge
 
-certified = Zertifiziert
-
 certificatAgence = Agentur f\u00FCr Zertifizierung
 
 certificatStandart = Standard der Zertifizierung
@@ -118,6 +116,8 @@ certification = Zertifizierung
 certificationChapter = ZERTIFIKATE
 
 certificationNumber = Nummer des Zertifikats
+
+certified = Zertifiziert
 
 chapterAllergens = ALLERGENE
 
@@ -229,6 +229,9 @@ costType = Kostenart
 
 costType.currentCost  = Aktuelle Kosten
 costType.futureCost   = Zuk\u00FCnftige Kosten
+costType.futureCost2  = Zuk\u00FCnftige Kosten (N+2)
+costType.futureCost3  = Zuk\u00FCnftige Kosten (N+3)
+costType.futureCost4  = Zuk\u00FCnftige Kosten (N+4)
 costType.previousCost = Bisherige Kosten
 
 costUnitPerSU = Kosten {priceListUnit}/VE
