--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fi.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fi.properties
@@ -105,9 +105,6 @@ cdlFreq = Taajuus
 
 cdlQty = Valvottava m\u00E4\u00E4r\u00E4
 
-
-certified = Sertifioitu
-
 certificatAgence = Sertifiointilaitos
 
 certificatStandart = Sertifiointistandardi
@@ -119,6 +116,8 @@ certification = Sertifiointi
 certificationChapter = SERTIFIOINNIT
 
 certificationNumber = Todistuksen numero
+
+certified = Sertifioitu
 
 chapterAllergens = ALLERGEENIT
 
@@ -230,6 +229,9 @@ costType = Kustannustyyppi
 
 costType.currentCost  = Nykyinen hinta
 costType.futureCost   = Tulevat kustannukset
+costType.futureCost2  = Tulevat kustannukset (N+2)
+costType.futureCost3  = Tulevat kustannukset (N+3)
+costType.futureCost4  = Tulevat kustannukset (N+4)
 costType.previousCost = Edellinen kustannus
 
 costUnitPerSU = Kustannukset {priceListUnit} / SU
