--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_it.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_it.properties
@@ -105,10 +105,6 @@ cdlFreq = Frequenza
 
 cdlQty = Quantit\u00E0 da controllare
 
-
-certified = Certificato
-
-
 certificatAgence = Agenzia di certificazione
 
 certificatStandart = Standard di certificazione
@@ -120,6 +116,8 @@ certification = Certificazione
 certificationChapter = CERTIFICAZIONI
 
 certificationNumber = Numero di certificato
+
+certified = Certificato
 
 chapterAllergens = ALLERGENI
 
@@ -231,6 +229,9 @@ costType = Tipo di costo
 
 costType.currentCost  = Costo attuale
 costType.futureCost   = Costo futuro
+costType.futureCost2  = Costo futuro (N+2)
+costType.futureCost3  = Costo futuro (N+3)
+costType.futureCost4  = Costo futuro (N+4)
 costType.previousCost = Costo precedente
 
 costUnitPerSU = Costo {priceListUnit}/UV
