--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_sv.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_sv.properties
@@ -105,8 +105,6 @@ cdlFreq = Frekvens
 
 cdlQty = Kvantitet att kontrollera
 
-certified = Auktoriserad
-
 certificatAgence = Certifieringsorgan
 
 certificatStandart = Certifieringsstandard
@@ -118,6 +116,8 @@ certification = Certifiering
 certificationChapter = CERTIFIERINGAR
 
 certificationNumber = Certifikatets nummer
+
+certified = Auktoriserad
 
 chapterAllergens = ALLERGENER
 
@@ -229,6 +229,9 @@ costType = Kostnadstyp
 
 costType.currentCost  = Aktuell kostnad
 costType.futureCost   = Aktuell kostnad
+costType.futureCost2  = Aktuell kostnad (N+2)
+costType.futureCost3  = Aktuell kostnad (N+3)
+costType.futureCost4  = Aktuell kostnad (N+4)
 costType.previousCost = Tidigare kostnad
 
 costUnitPerSU = Kostnad {priceListUnit} / SU
@@ -472,7 +475,7 @@ month = M\u00E5nad
 
 months = M\u00E5nader
 
-na = Ej till\u00e4mpligt
+na = Ej till\u00E4mpligt
 
 name = Produktnamn
 
