--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_nl.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_nl.properties
@@ -105,8 +105,6 @@ cdlFreq = Frequentie
 
 cdlQty = Hoeveelheid om te controleren
 
-certified = Gecertificeerd
-
 certificatAgence = Certificeringsbureau
 
 certificatStandart = Certificeringsnorm
@@ -118,6 +116,8 @@ certification = Certificering
 certificationChapter = CERTIFICERINGEN
 
 certificationNumber = Certificaatnummer
+
+certified = Gecertificeerd
 
 chapterAllergens = ALLERGENEN
 
@@ -229,6 +229,9 @@ costType = Kostentype
 
 costType.currentCost  = Huidige kost
 costType.futureCost   = Toekomstige kosten
+costType.futureCost2  = Toekomstige kosten (N+2)
+costType.futureCost3  = Toekomstige kosten (N+3)
+costType.futureCost4  = Toekomstige kosten (N+4)
 costType.previousCost = Vorige kosten
 
 costUnitPerSU = Kosten {priceListUnit}/VE
