Fix #24513 - [Feature] Added cost type locales

--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_de.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_de.properties
@@ -99,6 +99,10 @@ canContain = Kann enthalten :
 
 caskStrength = Unverd\u00FCnnt?
 
+cdlFreq = Frequenz
+
+cdlQty = Zu kontrollierende Menge
+
 certificatAgence = Agentur f\u00FCr Zertifizierung
 
 certificatStandart = Standard der Zertifizierung
@@ -110,6 +114,8 @@ certification = Zertifizierung
 certificationChapter = ZERTIFIKATE
 
 certificationNumber = Nummer des Zertifikats
+
+certified = Zertifiziert
 
 chapterAllergens = ALLERGENE
 
@@ -219,6 +225,9 @@ costType = Kostenart
 
 costType.currentCost  = Aktuelle Kosten
 costType.futureCost   = Zuk\u00FCnftige Kosten
+costType.futureCost2  = Zuk\u00FCnftige Kosten (N+2)
+costType.futureCost3  = Zuk\u00FCnftige Kosten (N+3)
+costType.futureCost4  = Zuk\u00FCnftige Kosten (N+4)
 costType.previousCost = Bisherige Kosten
 
 costUnitPerSU = Kosten {priceListUnit}/VE
