--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fi.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fi.properties
@@ -99,6 +99,10 @@ canContain = Voi sis\u00E4lt\u00E4\u00E4 :
 
 caskStrength = Laimentamattomana?
 
+cdlFreq = Taajuus
+
+cdlQty = Valvottava m\u00E4\u00E4r\u00E4
+
 certificatAgence = Sertifiointilaitos
 
 certificatStandart = Sertifiointistandardi
@@ -110,6 +114,8 @@ certification = Sertifiointi
 certificationChapter = SERTIFIOINNIT
 
 certificationNumber = Todistuksen numero
+
+certified = Sertifioitu
 
 chapterAllergens = ALLERGEENIT
 
@@ -219,6 +225,9 @@ costType = Kustannustyyppi
 
 costType.currentCost  = Nykyinen hinta
 costType.futureCost   = Tulevat kustannukset
+costType.futureCost2  = Tulevat kustannukset (N+2)
+costType.futureCost3  = Tulevat kustannukset (N+3)
+costType.futureCost4  = Tulevat kustannukset (N+4)
 costType.previousCost = Edellinen kustannus
 
 costUnitPerSU = Kustannukset {priceListUnit} / SU
