--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_it.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_it.properties
@@ -99,6 +99,10 @@ canContain = Pu\u00F2 contenere :
 
 caskStrength = Non diluito?
 
+cdlFreq = Frequenza
+
+cdlQty = Quantit\u00E0 da controllare
+
 certificatAgence = Agenzia di certificazione
 
 certificatStandart = Standard di certificazione
@@ -110,6 +114,8 @@ certification = Certificazione
 certificationChapter = CERTIFICAZIONI
 
 certificationNumber = Numero di certificato
+
+certified = Certificato
 
 chapterAllergens = ALLERGENI
 
@@ -219,6 +225,9 @@ costType = Tipo di costo
 
 costType.currentCost  = Costo attuale
 costType.futureCost   = Costo futuro
+costType.futureCost2  = Costo futuro (N+2)
+costType.futureCost3  = Costo futuro (N+3)
+costType.futureCost4  = Costo futuro (N+4)
 costType.previousCost = Costo precedente
 
 costUnitPerSU = Costo {priceListUnit}/UV
